--- a/en/home.html
+++ b/en/home.html
@@ -192,6 +192,9 @@
                 <h2>Institutional Partners</h2>
                 <div class="institutional">
                     <div class="sponsor">
+                        <img src="img/sponsor/Logo_ambasadës_së_Kosovës.png">
+                    </div>
+                    <div class="sponsor">
                         <img src="img/sponsor/image2 (1).png" id="first-nth">
                     </div>
                     <div class="sponsor">
