--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                 <h2>Partnerët Institucionalë</h2>
                 <div class="institutional">
                     <div class="sponsor">
+                        <img src="img/sponsor/Logo_ambasadës_së_Kosovës.png">
+                    </div>
+                    <div class="sponsor">
                         <img src="img/sponsor/image2 (1).png" id="first-nth">
                     </div>
                     <div class="sponsor">
