--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="search-box">
                 <div class="row">
                     <input type="text" id="input-box" placeholder="Kerkoni" autocomplete="off">
-                    <button id="clear-btn" style="display: none;"><i class="bi bi-x-lg"></i></button>
+                    <button id="clear-btn" style="display: none;"><i class="bi bi-x-lg" id="clear"></i></button>
                     <i class="bi bi-search" id="search-btn"></i>
                 </div>
                 <div class="result-box">
