--- a/alfred-mirashi-milot.html
+++ b/alfred-mirashi-milot.html
@@ -15,8 +15,8 @@
         <link rel="canonical" href="https://durresbiennale.org/alfred-mirashi-milot">
         <meta property="og:url" content="https://durresbiennale.org/alfred-mirashi-milot">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Alfred Mirashi Milot | Durres International Biennale of Contemporary Art">
-        <meta property="og:description" content="Alfred Mirashi Milot">
+        <meta property="og:title" content="Alfred Mirashi Milot">
+        <meta property="og:description" content="Alfred Mirashi Milot | Durres International Biennale of Contemporary Art">
         <meta property="og:image" content="https://durresbiennale.org/img/banner_img/Milot.png">
         <meta property="og:image:width" content="800">
         <meta property="og:image:height" content="800">
@@ -34,18 +34,18 @@
                         <li><a href="en/alfred-mirashi-milot">EN</a></li>
                         <li><a href="https://durresbiennale.org">Ballina</a></li>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li>
-                        <li><a href="history">Historia</a></li>
+                        <li><a href="history">Historiku</a></li>
                         <li><a href="contact">Kontakt</a></li>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li>
                         <li class="dropdown">
                             <a href="">Të tjera </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Edicionet e Bienales</a></li>
-                                <li><a href="publishing">Publikimi</a></li>
+                                <li><a href="publishing">Botime</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Koleksioni</a></li>
-                                <li><a href="notification">Njoftimet</a></li>
+                                <li><a href="notification">Njoftime</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -59,15 +59,15 @@
                     <ul>
                         <li><a href="https://durresbiennale.org">Ballina</a></li><br>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li><br>
-                        <li><a href="history">Historia</a></li><br>
+                        <li><a href="history">Historiku</a></li><br>
                         <li><a href="contact">Kontakt</a></li><br>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li><br>
                         <li><a href="editions">Edicionet e Bienales</a></li><br>
-                        <li><a href="publishing">Publikimi</a></li><br>
+                        <li><a href="publishing">Botime</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Koleksioni</a></li><br>
-                        <li><a href="notification">Njoftimet</a></li>
+                        <li><a href="notification">Njoftime</a></li>
                     </ul>
                 </div>
             </nav>
