--- a/blerina-zela.html
+++ b/blerina-zela.html
@@ -34,18 +34,18 @@
                         <li><a href="en/blerina-zela">EN</a></li>
                         <li><a href="https://durresbiennale.org">Ballina</a></li>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li>
-                        <li><a href="history">Historia</a></li>
+                        <li><a href="history">Historiku</a></li>
                         <li><a href="contact">Kontakt</a></li>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li>
                         <li class="dropdown">
                             <a href="">Të tjera </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Edicionet e Bienales</a></li>
-                                <li><a href="publishing">Publikimi</a></li>
+                                <li><a href="publishing">Botime</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Koleksioni</a></li>
-                                <li><a href="notification">Njoftimet</a></li>
+                                <li><a href="notification">Njoftime</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -59,15 +59,15 @@
                     <ul>
                         <li><a href="https://durresbiennale.org">Ballina</a></li><br>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li><br>
-                        <li><a href="history">Historia</a></li><br>
+                        <li><a href="history">Historiku</a></li><br>
                         <li><a href="contact">Kontakt</a></li><br>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li><br>
                         <li><a href="editions">Edicionet e Bienales</a></li><br>
-                        <li><a href="publishing">Publikimi</a></li><br>
+                        <li><a href="publishing">Botime</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Koleksioni</a></li><br>
-                        <li><a href="notification">Njoftimet</a></li>
+                        <li><a href="notification">Njoftime</a></li>
                     </ul>
                 </div>
             </nav>
