--- a/en/alfred-mirashi-milot.html
+++ b/en/alfred-mirashi-milot.html
@@ -15,8 +15,8 @@
         <link rel="canonical" href="https://durresbiennale.org/alfred-mirashi-milot">
         <meta property="og:url" content="https://durresbiennale.org/alfred-mirashi-milot">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Alfred Mirashi Milot | Durres International Biennale of Contemporary Art">
-        <meta property="og:description" content="Alfred Mirashi Milot">
+        <meta property="og:title" content="Alfred Mirashi Milot">
+        <meta property="og:description" content="Alfred Mirashi Milot | Durres International Biennale of Contemporary Art">
         <meta property="og:image" content="https://durresbiennale.org/img/banner_img/Milot.png">
         <meta property="og:image:width" content="800">
         <meta property="og:image:height" content="800">
@@ -41,11 +41,11 @@
                             <a href="">Other </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Biennial editions</a></li>
-                                <li><a href="publishing">Publishing</a></li>
+                                <li><a href="publishing">Publications</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Collection</a></li>
-                                <li><a href="notification">Notification</a></li>
+                                <li><a href="notification">Notifications</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -63,11 +63,11 @@
                         <li><a href="contact">Contact</a></li><br>
                         <li><a href="biennale">Durres Biennale 2024 </a></li><br>
                         <li><a href="editions">Biennial editions</a></li><br>
-                        <li><a href="publishing">Publishing</a></li><br>
+                        <li><a href="publishing">Publications</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Collection</a></li><br>
-                        <li><a href="notification">Notification</a></li>
+                        <li><a href="notification">Notifications</a></li>
                     </ul>
                 </div>
             </nav>
