--- a/en/publishing.html
+++ b/en/publishing.html
@@ -32,11 +32,11 @@
                             <a href="">Other </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Biennial editions</a></li>
-                                <li><a href="publishing">Publishing</a></li>
+                                <li><a href="publishing">Publications</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Collection</a></li>
-                                <li><a href="notification">Notification</a></li>
+                                <li><a href="notification">Notifications</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -54,18 +54,18 @@
                         <li><a href="contact">Contact</a></li><br>
                         <li><a href="biennale">Durres Biennale 2024 </a></li><br>
                         <li><a href="editions">Biennial editions</a></li><br>
-                        <li><a href="publishing">Publishing</a></li><br>
+                        <li><a href="publishing">Publications</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Collection</a></li><br>
-                        <li><a href="notification">Notification</a></li>
+                        <li><a href="notification">Notifications</a></li>
                     </ul>
                 </div>
             </nav>
 
             <div class="heading">
                 <div class="container">
-                    <h1>Publishing</h1>
+                    <h1>Publications</h1>
                 </div>
                 <h3><center>Coming Soon</center></h3>
             </div>
