--- a/en/biennale.html
+++ b/en/biennale.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="canonical" href="https://durresbiennale.org/biennale">
-        <meta property="og:url" content="https://durresbiennale.org/biennale">
+        <meta property="og:url" content="https://durresbiennale.org/en/biennale">
         <meta property="og:type" content="website">
         <meta property="og:title" content="The Hybrid Future | Durres International Biennale of Contemporary Art">
         <meta property="og:description" content="Curatorial Text">
@@ -41,11 +41,11 @@
                             <a href="">Other </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Biennial editions</a></li>
-                                <li><a href="publishing">Publishing</a></li>
+                                <li><a href="publishing">Publications</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Collection</a></li>
-                                <li><a href="notification">Notification</a></li>
+                                <li><a href="notification">Notifications</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -63,11 +63,11 @@
                         <li><a href="contact">Contact</a></li><br>
                         <li><a href="biennale">Durres Biennale 2024 </a></li><br>
                         <li><a href="editions">Biennial editions</a></li><br>
-                        <li><a href="publishing">Publishing</a></li><br>
+                        <li><a href="publishing">Publications</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Collection</a></li><br>
-                        <li><a href="notification">Notification</a></li>
+                        <li><a href="notification">Notifications</a></li>
                     </ul>
                 </div>
             </nav>
