--- a/en/teuta-dhima.html
+++ b/en/teuta-dhima.html
@@ -41,11 +41,11 @@
                             <a href="">Other </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Biennial editions</a></li>
-                                <li><a href="publishing">Publishing</a></li>
+                                <li><a href="publishing">Publications</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Collection</a></li>
-                                <li><a href="notification">Notification</a></li>
+                                <li><a href="notification">Notifications</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -63,11 +63,11 @@
                         <li><a href="contact">Contact</a></li><br>
                         <li><a href="biennale">Durres Biennale 2024 </a></li><br>
                         <li><a href="editions">Biennial editions</a></li><br>
-                        <li><a href="publishing">Publishing</a></li><br>
+                        <li><a href="publishing">Publications</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Collection</a></li><br>
-                        <li><a href="notification">Notification</a></li>
+                        <li><a href="notification">Notifications</a></li>
                     </ul>
                 </div>
             </nav>
