--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
                         <li><a href="en/home">EN</a></li>
                         <li><a href="https://durresbiennale.org">Ballina</a></li>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li>
-                        <li><a href="history">Historia</a></li>
+                        <li><a href="history">Historiku</a></li>
                         <li><a href="contact">Kontakt</a></li>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li>
                         <li class="dropdown">
                             <a href="">Të tjera </a><i class="ci bi-caret-down-fill"></i>
                             <ul class="dropdown-menu">
                                 <li><a href="editions">Edicionet e Bienales</a></li>
-                                <li><a href="publishing">Publikimi</a></li>
+                                <li><a href="publishing">Botime</a></li>
                                 <li><a href="art-talk">Art – Talk</a></li>
                                 <li><a href="workshop">Workshop</a></li>
                                 <li><a href="collection">Koleksioni</a></li>
-                                <li><a href="notification">Njoftimet</a></li>
+                                <li><a href="notification">Njoftime</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -50,15 +50,15 @@
                     <ul>
                         <li><a href="https://durresbiennale.org">Ballina</a></li><br>
                         <li><a href="rreth_nesh">Rreth Nesh</a></li><br>
-                        <li><a href="history">Historia</a></li><br>
+                        <li><a href="history">Historiku</a></li><br>
                         <li><a href="contact">Kontakt</a></li><br>
                         <li><a href="biennale">Bienalja e Durrësit 2024 </a></li><br>
                         <li><a href="editions">Edicionet e Bienales</a></li><br>
-                        <li><a href="publishing">Publikimi</a></li><br>
+                        <li><a href="publishing">Botime</a></li><br>
                         <li><a href="art-talk">Art – Talk</a></li><br>
                         <li><a href="workshop">Workshop</a></li><br>
                         <li><a href="collection">Koleksioni</a></li><br>
-                        <li><a href="notification">Njoftimet</a></li>
+                        <li><a href="notification">Njoftime</a></li>
                     </ul>
                 </div>
             </nav>           
@@ -211,7 +211,7 @@
                         <img src="img/sponsor/LOGOMUSEOMACALsenza.png">
                     </div>
                 </div>
-                <h2 class="sc">Partnerët Mediatik</h2>
+                <h2 class="sc">Partnerët Mediatikë</h2>
                 <div class="media">
                     <div class="sponsor">
                         <img src="img/sponsor/bordo_black_-_logo-removebg-preview.png" id="two-ch">
@@ -219,11 +219,6 @@
                     <div class="sponsor">
                         <img src="img/sponsor/LOGOINEWSARTENUOVO.png" id="two-ch">
                     </div>
-                    <div class="sponsor">
-                        <img src="img/sponsor/logo-header.webp">
-                    </div>
-                </div>
-                <div class="seperate">
                     <div class="sponsor">
                         <img src="img/sponsor/LOGO_MEDIAPRESSE23nuovo100-removebg-preview.png">
                     </div>
